--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html, body, * {
     height: 500px;
     border-color:black;
     border: 20px solid black;
+    border-radius: 5%;
     display: flex;
     margin: 60px 20px;
     flex-direction: column;
@@ -41,14 +42,18 @@ html, body, * {
     text-align: center;
 }
 
+.card-artist{
+    font-size: 100px;
+    text-align: center;
+}
+
 .card-img{
     width:50%;
     height: auto;
-
 }
 
-.card-author{
-    font-size: 100px;
+.card-album{
+    font-size: 50px;
     text-align: center;
 }
 
