--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body, * {
 } 
 
 .bgc{
-    background-image:linear-gradient(blue,purple);
+    background-image:linear-gradient(225deg,rgb(0, 0, 174),rgb(79, 0, 79));
 }
 
 .title{
@@ -37,14 +37,11 @@ html, body, * {
     justify-content: space-around;
 }
 
-.card-header{
-    font-size: 100px;
-    text-align: center;
-}
 
 .card-artist{
-    font-size: 100px;
+    font-size: 80px;
     text-align: center;
+
 }
 
 .card-img{
@@ -57,12 +54,27 @@ html, body, * {
     text-align: center;
 }
 
-.btn{
-    text-align:center;
-    font-size:90px;
-}
 
 .form{
-    text-align:center;
-    
+    text-align: center;
+}
+
+.form input{
+    font-size: 200%;
+    width: 225px;
+    height: 50px;
+    margin-left: 5px; 
+    margin-right: 50px; 
+    margin-top: 20px;
+}
+
+.form label {
+    font-size: 300%;
+}
+
+.form button {
+    margin-top: 30px;
+    font-size: 200%;
+    width: 150px;
+    height: 50px; 
 }
