--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html, body, * {
     width: 500px;
     height: 500px;
     border-color:black;
-    border: 20px solid black;
+    border: 15px solid black;
     border-radius: 5%;
     display: flex;
     margin: 60px 20px;
@@ -39,18 +39,17 @@ html, body, * {
 
 
 .card-artist{
-    font-size: 80px;
+    font-size: 500%;
     text-align: center;
-
 }
 
 .card-img{
-    width:50%;
+    width: 50%;
     height: auto;
 }
 
 .card-album{
-    font-size: 50px;
+    font-size: 350%;
     text-align: center;
 }
 
